fixed canvas not scrolling with view; fixed glitch text so it won't overflow beyond page;

--- a/assets/css/glitch.css
+++ b/assets/css/glitch.css
@@ -1,13 +1,9 @@
-html,
-body,
 #tv {
   padding: 0;
   margin: 0;
   width: 100%;
   height: 100%;
-}
-#tv {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   -webkit-transform: translate3d(0, 0, 0);
@@ -27,7 +23,7 @@ body {
   color: white;
   font-size: 40px;
   position: relative;
-  width: 400px;
+  max-width: 400px;
   margin: 0 auto;
 }
 
